# template-repo

./: .gitignore  README.md  main.py  makefile  pyproject.toml  readme.md
src/my_project/: config_manager.py  constants.py
src/my_project/configs/: config.yaml
src/my_project/utils/: utils_pygame.py
terrain_generation/diamond_square/: constants.py  diamond_square.py  main.py
terrain_generation/wave_function_collapse/: visualize.py  wfc.py
terrain_generation/wave_function_collapse/bitmaps/: flowers.xlsx  tile_1.xlsx
wave_function_collapse/: bitmap.py  constants.py  game.py  game_old.py  main.py  pyproject.toml  tile.py  visualize.py  wfc.py
wave_function_collapse/bitmaps/: .~lock.tile_1.xlsx#  flowers.xlsx  tile_0.xlsx  tile_1.xlsx  tile_2.xlsx
